--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,11 @@
 
 # dependencies
 /node_modules
+.env
 /.pnp
-.pnp.js
 
 # testing
-/coverage
-
+.gitignore
 # production
 /build
 
@@ -18,7 +17,6 @@ firebase.json
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
